styles.css
html {
  --cyan: #0184BC;
  --blue: #4078F2;
  --purple: #A626A4;
  --rose: #E45649;
  --red: #CA1243;
  --green: #50A14F;
  --text: #383A42;
  --background: #FAFAFA;
  --gutter: #A1A1A1;
  --guide: #CFD0D1;
  
  background-color: var(--background);
  color: var(--text);

  font-family: "Alegreya Sans", sans-serif;
  font-weight: 400;
  font-style: normal;
}

* {
  box-sizing: border-box;
}

/* Fonts */
.rosarivo-regular-italic {
  font-family: "Rosarivo", cursive;
  font-weight: 400;
  font-style: italic;
}

.alegreya-sans-regular {
  font-family: "Alegreya Sans", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.alegreya-sans-bold {
  font-family: "Alegreya Sans", sans-serif;
  font-weight: 700;
  font-style: normal;
}


body {
  margin: 0;
  box-sizing: border-box;
}

.square-container {
  position: absolute;
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  width: 100vw;
  overflow: hidden;
  z-index: 0;
}

.square {
  border: 1px solid var(--text);
  width: 62px;
  height: 62px;
  content: "";
  opacity: 0.01;
  transition: all 0.2s ease-in-out;
}

.square:hover {
  background: var(--text);
  opacity: 0.05;
}

.hero__nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 2rem 5rem;
}

.hero__nav ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  list-style-type: none;
  gap: 5rem;
  margin: 0;
  padding: 0;
}

.hero__nav ul li {
  margin: 0;
  padding: 0;
  font-size: 1rem;
  font-family: "Azeret Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  z-index: 2;
}

.highlighted__text {
  color: var(--green);
}

.logo__text {
  color: var(--green);
  font-size: 2rem;
  font-family: "Rosarivo", cursive;
  font-weight: 400;
  font-style: italic;
}

a.nav__link {
  text-decoration: none;
  color: var(--text);
}

a.nav__link.highlighted__text {
  color: var(--green);
}

a {
  color: var(--cyan);
  text-decoration: none;
}

main {
  display: flex;
  flex-direction: column;
  padding: 0 15%;
}

section.hero {
  font-family: "Azeret Mono", monospace;
  font-optical-sizing: auto;
  height: 80vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.hero__hello {
  color: var(--cyan);
  font-size: 1.7rem;
  margin-bottom: 1.2rem;
}

.hero__name {
  color: var(--green);
  font-size: 5.6rem;
  font-family: "Rosarivo", cursive;
  font-weight: 400;
  font-style: italic;
  margin-bottom: 0.6rem;
}

.hero__subline {
  color: var(--gutter);
  font-size: 2.2rem;
}

.angles-down {
  height: 3rem;
  width: 3rem;
  color: var(--cyan);
  opacity: 0.6;
  align-self: center;
  bottom: 0;
  position: absolute;
}

.fixed__sidebar {
  margin-bottom: 20%;
  display: flex;
  flex-direction: row;
  gap: 10%;
  position: relative;
}

.sidebar__nav {
  position: sticky;
  width: 320px;
  margin-top: 10%;
  height: 0;
  top: 20%;
  z-index: 2;
}

.sidebar__nav ul {
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.sidebar__nav ul li {
  margin: 0;
  padding: 0;
  font-size: 1.4rem;
  font-family: "Azeret Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.fixed__sidebar--content {
  margin-left: 320px;
  flex: 1;
}

.fixed__sidebar--content p {
  margin-top: 0;
}

h2.subheading {
  display: none;
}

section.about-me, section.projects {
  margin-bottom: 30%;
}

section.projects {
  display: flex;
  flex-flow: row wrap;
  gap: 2rem;
}

.project__card {
  display: flex;
  flex-basis: calc(50% - 1rem);
  flex-direction: column;
  border-radius: 5px;
  border: 1px solid var(--guide);
  padding: 1rem;
  width: calc(50% - 1rem);
}

.project__preview {
  height: 11rem;
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
}

.project__preview img {
  max-height: 11rem;
  max-width: 100%;
  border-radius: 5px;
  border: 1px solid var(--guide);
}

.project__name {
  font-family: "Azeret Mono", monospace;
  color: var(--cyan); 
  font-size: 1.4rem;
  margin-bottom: 1rem;
}

svg.socials__icon {
  height: 4rem;
  color: var(--cyan);
}

section.contact > p {
  font-size: 1.2rem;
  margin: 0;
  margin-bottom: 2rem;
}

/* Animations */

.bounce2 {
  animation: bounce2 2s ease infinite;
  cursor: pointer;
}

@keyframes bounce2 {
	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
	40% {transform: translateY(30px);}
	60% {transform: translateY(15px);}
}

@media screen and (max-width: 600px) {  
  main {
    padding: 0 8%;
  }

  .hero__nav {
    display: none;
  }

  section.hero {
    height: 90vh;
    margin-bottom: 10vh;
  }

  .hero__hello {
    font-size: 1.2rem;
  }

  .hero__name {
    font-size: 4rem;
    line-height: 5rem;
  }

  .hero__subline {
    font-size: 1.2rem;
  }

  .sidebar__nav {
    display: none;
  }

  .fixed__sidebar {
    margin-top: 20%;
  }

  .fixed__sidebar--content {
    margin-left: 0;
  }

  h2.subheading {
    display: block;
    color: var(--green);
    font-size: 1.4rem;
    margin-bottom: 0.8rem;
    font-family: "Rosarivo", cursive;
    font-weight: 400;
    font-style: italic;
    width: 100%;
  }

  .project__card {
    flex-basis: 100%;
    width: 100%;
    flex: 1;
  }
}

